--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1594653834,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "date": "2026-Feb-10",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 564018498,
+  "date": "2026-Feb-10"
 }
