--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2026-Feb-10",
-  "seed": 1162801550
+  "seed": 1553650371,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
