--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
   "date": "2026-Feb-10",
-  "seed": 528417774
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 648798856,
+  "rate": "3.64"
 }
