--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
-  "seed": 1046798865,
+  "date": "2026-Feb-10",
+  "seed": 284736044,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Feb-10"
+  "rate": "3.64"
 }
