--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Feb-10",
-  "seed": 284736044,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64"
+  "rate": "3.64",
+  "date": "2026-Feb-11",
+  "seed": 1052046610,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
