--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1220607728,
   "date": "2026-Feb-11",
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 34596198
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
