--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
   "date": "2026-Feb-11",
-  "seed": 450435008
+  "rate": "3.64",
+  "seed": 1501271029,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
