--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Feb-11",
   "rate": "3.64",
-  "seed": 1501271029,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 2012953109,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2026-Feb-11"
 }
