--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 765630087,
-  "rate": "3.64",
+  "seed": 1139396143,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Feb-11"
+  "date": "2026-Feb-12",
+  "rate": "3.64"
 }
