--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "date": "2026-Feb-12",
-  "seed": 699129958
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1381908180,
+  "date": "2026-Feb-12"
 }
