--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
+  "seed": 950517779,
+  "date": "2026-Feb-12",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1381908180,
-  "date": "2026-Feb-12"
+  "rate": "3.64"
 }
