--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 950517779,
   "date": "2026-Feb-12",
+  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64"
+  "seed": 1684829615
 }
