--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2026-Feb-12",
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1684829615
+  "seed": 1750293427,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
