--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Feb-12",
-  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 210275088
+  "date": "2026-Feb-12",
+  "seed": 1534541966,
+  "rate": "3.64"
 }
