--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 627001043,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Feb-12",
-  "seed": 1534541966,
-  "rate": "3.64"
+  "rate": "3.64",
+  "date": "2026-Feb-12"
 }
