--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1879065961,
+  "seed": 592973552,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
-  "date": "2026-Feb-12"
+  "date": "2026-Feb-12",
+  "rate": "3.64"
 }
