--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 592973552,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 844522043,
   "date": "2026-Feb-12",
-  "rate": "3.64"
+  "rate": "3.64",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
