--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
+  "seed": 1818855904,
   "date": "2026-Feb-12",
-  "seed": 106010078
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.64"
 }
