--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "3.64",
   "date": "2026-Feb-12",
-  "seed": 1164769767,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64"
+  "seed": 1836371505
 }
