--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 458635271,
   "rate": "3.64",
-  "date": "2026-Feb-12",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1836371505
+  "date": "2026-Feb-12"
 }
