--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2146631229,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "date": "2026-Feb-12"
+  "date": "2026-Feb-12",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1570553891
 }
