--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
-  "date": "2026-Feb-12",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 849380460
+  "rate": "3.64",
+  "seed": 1136614230,
+  "date": "2026-Feb-12"
 }
