--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2026-Feb-12",
-  "seed": 1708523047
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1538184060,
+  "rate": "3.64"
 }
