--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2026-Feb-12",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1538184060,
-  "rate": "3.64"
+  "rate": "3.64",
+  "seed": 1776225726
 }
