--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Feb-12",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "seed": 1776225726
+  "seed": 1082238591,
+  "date": "2026-Feb-16*"
 }
