--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
   "date": "2026-Feb-16*",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 177590950
+  "seed": 1040073919,
+  "rate": "3.64",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
