--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 854106223,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2060430331,
-  "date": "2026-Feb-16*",
-  "rate": "3.64"
+  "rate": "3.64",
+  "date": "2026-Feb-16*"
 }
