--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Feb-16*",
-  "rate": "3.64",
+  "seed": 987910619,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 451072047
+  "date": "2026-Feb-16*",
+  "rate": "3.64"
 }
