--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1481589779,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1331834333,
+  "rate": "3.64",
   "date": "2026-Feb-16*",
-  "rate": "3.64"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
