--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 252794439,
   "rate": "3.64",
-  "date": "2026-Feb-16*",
+  "date": "2026-Feb-17",
+  "seed": 1724472010,
   "source": "https://www.federalreserve.gov/releases/h15/"
 }
