--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 408813270,
-  "date": "2026-Feb-17",
+  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64"
+  "date": "2026-Feb-17",
+  "seed": 857059477
 }
