--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Feb-17",
-  "seed": 857059477
+  "seed": 1343223865,
+  "rate": "3.64",
+  "date": "2026-Feb-17"
 }
