--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1343223865,
+  "seed": 2028959089,
   "rate": "3.64",
-  "date": "2026-Feb-17"
+  "date": "2026-Feb-17",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
