--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1471304262,
   "date": "2026-Feb-17",
-  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1639677065
+  "rate": "3.64"
 }
