--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1471304262,
-  "date": "2026-Feb-17",
+  "rate": "3.64",
+  "seed": 609627096,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64"
+  "date": "2026-Feb-17"
 }
