--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.64",
-  "seed": 609627096,
+  "date": "2026-Feb-17",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Feb-17"
+  "seed": 442193232
 }
