--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1063618869,
   "rate": "3.64",
-  "date": "2026-Feb-17",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2026-Feb-18",
+  "seed": 1728596243
 }
