--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 380996717,
+  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Feb-18",
-  "seed": 841571483,
-  "rate": "3.64"
+  "date": "2026-Feb-18"
 }
