--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
-  "seed": 1931048743,
+  "date": "2026-Feb-18",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Feb-18"
+  "rate": "3.64",
+  "seed": 1509010713
 }
