--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Feb-18",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "seed": 1509010713
+  "date": "2026-Feb-18",
+  "seed": 1786588974,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
