--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Feb-18",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 782511479,
-  "rate": "3.64"
+  "seed": 2130326891,
+  "rate": "3.64",
+  "date": "2026-Feb-18"
 }
