--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2130326891,
   "rate": "3.64",
-  "date": "2026-Feb-18"
+  "date": "2026-Feb-18",
+  "seed": 986197646,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
