--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2026-Feb-19",
   "rate": "3.64",
-  "seed": 1358116642
+  "seed": 1395628466,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
