--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2026-Feb-19",
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 582202153,
-  "date": "2026-Feb-19"
+  "seed": 183502068,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
