--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 289377574,
   "date": "2026-Feb-19",
-  "seed": 137623405,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "3.64"
 }
