--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1706304503,
-  "date": "2026-Feb-19",
+  "seed": 1897805075,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64"
+  "rate": "3.64",
+  "date": "2026-Feb-19"
 }
