--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.64",
-  "date": "2026-Feb-19",
-  "seed": 41911450,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 8661006,
+  "date": "2026-Feb-20"
 }
