--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 2031945862,
   "rate": "3.64",
-  "seed": 413909740,
-  "date": "2026-Feb-20"
+  "date": "2026-Feb-20",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
