--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 220354739,
+  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Feb-20",
-  "seed": 928533554,
-  "rate": "3.64"
+  "date": "2026-Feb-20"
 }
