--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 220354739,
+  "seed": 565128260,
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Feb-20"
+  "date": "2026-Feb-20",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
