--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2026-Feb-20",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "seed": 775563112,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 663752270
 }
