--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Feb-20",
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1346783105
+  "seed": 1488766869,
+  "date": "2026-Feb-20",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
