--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1329843234,
-  "date": "2026-Feb-23",
+  "rate": "3.64",
+  "seed": 370708644,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64"
+  "date": "2026-Feb-23"
 }
