--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "seed": 86525831,
-  "date": "2026-Feb-23"
+  "date": "2026-Feb-23",
+  "seed": 1070179586,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
