--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2026-Feb-23",
   "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 535206518,
-  "date": "2026-Feb-23"
+  "seed": 981228687
 }
