--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2026-Feb-23",
-  "seed": 982942834,
-  "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1667961673,
+  "rate": "3.64"
 }
