--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 482270853,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2026-Feb-23",
-  "rate": "3.64"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.64",
+  "seed": 674527379
 }
