--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Feb-23",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 2059067279,
+  "date": "2026-Feb-24",
   "rate": "3.64",
-  "seed": 674527379
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
