--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Feb-24",
-  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 155825788
+  "rate": "3.64",
+  "seed": 1724183259,
+  "date": "2026-Feb-24"
 }
