--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "seed": 1724183259,
-  "date": "2026-Feb-24"
+  "date": "2026-Feb-24",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1022172911
 }
