--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
   "date": "2026-Feb-24",
+  "seed": 208205860,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1022172911
+  "rate": "3.64"
 }
