--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1764676609,
-  "date": "2026-Feb-24",
+  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64"
+  "date": "2026-Feb-24",
+  "seed": 222013975
 }
