--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1871587950,
   "rate": "3.64",
-  "date": "2026-Feb-24",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1357529404
+  "date": "2026-Feb-25"
 }
