--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1871587950,
-  "rate": "3.64",
+  "seed": 478422291,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Feb-25"
+  "date": "2026-Feb-25",
+  "rate": "3.64"
 }
