--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 478422291,
+  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Feb-25",
-  "rate": "3.64"
+  "seed": 1013329099,
+  "date": "2026-Feb-25"
 }
