--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Feb-25",
+  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 479072269,
-  "rate": "3.64"
+  "date": "2026-Feb-25",
+  "seed": 1922751883
 }
