--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
+  "seed": 621890152,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Feb-25",
-  "seed": 1922751883
+  "rate": "3.64",
+  "date": "2026-Feb-25"
 }
