--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 286804026,
-  "date": "2026-Feb-25"
+  "date": "2026-Feb-25",
+  "seed": 1313413141,
+  "rate": "3.64"
 }
