--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.64",
   "date": "2026-Feb-25",
-  "seed": 1313413141,
-  "rate": "3.64"
+  "seed": 1855476965
 }
