--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.64",
-  "seed": 560829062,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Feb-25"
+  "date": "2026-Feb-25",
+  "seed": 1419966526
 }
