--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2095100097,
+  "rate": "3.64",
   "date": "2026-Feb-25",
-  "rate": "3.64"
+  "seed": 867852879
 }
