--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Feb-26",
-  "seed": 1243701628,
-  "rate": "3.64"
+  "seed": 96804932,
+  "rate": "3.64",
+  "date": "2026-Feb-26"
 }
